// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`B2cPartnershipPaymentTerm render with minimum props required 1`] = `
<div id="paymentTermField"
     class="o-forms__group ncf__payment-term ncf__b2c-partnership-payment-term"
>
  <div class="ncf__payment-term__item o-forms-input--radio-round">
    <input type="radio"
           id="299.99"
           name="paymentTerm"
           value="299.99"
           checked
    >
    <label for="299.99"
           class="o-forms-input__label ncf__payment-term__label"
    >
      <span class="ncf__payment-term__title">
        £299.99 - Digital FT + The Washington Post
      </span>
      <div class="ncf__b2c-partnership-payment-term__description">
        <p>
          Includes:
          <br>
          1 year Digital subscription to the Financial Times
          <br>
          90-day All-Access Digital subscription to The Washington Post
        </p>
      </div>
    </label>
  </div>
  <div class="ncf__payment-term__legal">
    <p>
      We will automatically renew your subscription using the payment method provided unless you cancel before your renewal date.
    </p>
    <p>
      We will notify you at least 14 days in advance of any changes to the price in your subscription that would apply upon next renewal. Find out more about our cancellation policy in our
      <a class="ncf__link--external"
         href="https://help.ft.com/help/legal-privacy/terms-conditions/"
         title="FT Legal Terms and Conditions help page"
         target="_blank"
         rel="noopener noreferrer"
      >
        Terms &amp; Conditions
      </a>
      .
    </p>
  </div>
</div>
`;

exports[`B2cPartnershipPaymentTerm renders with annual option 1`] = `
<div id="paymentTermField"
     class="o-forms__group ncf__payment-term ncf__b2c-partnership-payment-term"
>
  <div class="ncf__payment-term__item o-forms-input--radio-round">
    <input type="radio"
           id="annual"
           name="paymentTerm"
           value="annual"
           checked
    >
    <label for="annual"
           class="o-forms-input__label ncf__payment-term__label"
    >
      <span class="ncf__payment-term__title">
        £20.00 - Digital FT + The Washington Post
      </span>
      <div class="ncf__b2c-partnership-payment-term__description">
        <p>
          Includes:
          <br>
          1 year Digital subscription to the Financial Times
          <br>
          90-day All-Access Digital subscription to The Washington Post
        </p>
      </div>
    </label>
  </div>
  <div class="ncf__payment-term__legal">
    <p>
      We will automatically renew your subscription using the payment method provided unless you cancel before your renewal date.
    </p>
    <p>
      We will notify you at least 14 days in advance of any changes to the price in your subscription that would apply upon next renewal. Find out more about our cancellation policy in our
      <a class="ncf__link--external"
         href="https://help.ft.com/help/legal-privacy/terms-conditions/"
         title="FT Legal Terms and Conditions help page"
         target="_blank"
         rel="noopener noreferrer"
      >
        Terms &amp; Conditions
      </a>
      .
    </p>
  </div>
</div>
`;

exports[`B2cPartnershipPaymentTerm renders with monthly option 1`] = `
<div id="paymentTermField"
     class="o-forms__group ncf__payment-term ncf__b2c-partnership-payment-term"
>
  <div class="ncf__payment-term__item o-forms-input--radio-round">
    <input type="radio"
           id="monthly"
           name="paymentTerm"
           value="monthly"
           checked
    >
    <label for="monthly"
           class="o-forms-input__label ncf__payment-term__label"
    >
      <span class="ncf__payment-term__title">
        £20.00 - Digital FT + The Washington Post
      </span>
      <div class="ncf__b2c-partnership-payment-term__description">
        <p>
          Includes:
          <br>
          1 month Digital subscription to the Financial Times
          <br>
          90-day All-Access Digital subscription to The Washington Post
        </p>
      </div>
    </label>
  </div>
  <div class="ncf__payment-term__legal">
    <p>
      We will automatically renew your subscription using the payment method provided unless you cancel before your renewal date.
    </p>
    <p>
      We will notify you at least 14 days in advance of any changes to the price in your subscription that would apply upon next renewal. Find out more about our cancellation policy in our
      <a class="ncf__link--external"
         href="https://help.ft.com/help/legal-privacy/terms-conditions/"
         title="FT Legal Terms and Conditions help page"
         target="_blank"
         rel="noopener noreferrer"
      >
        Terms &amp; Conditions
      </a>
      .
    </p>
  </div>
</div>
`;

exports[`B2cPartnershipPaymentTerm renders with quarterly option 1`] = `
<div id="paymentTermField"
     class="o-forms__group ncf__payment-term ncf__b2c-partnership-payment-term"
>
  <div class="ncf__payment-term__item o-forms-input--radio-round">
    <input type="radio"
           id="quarterly"
           name="paymentTerm"
           value="quarterly"
           checked
    >
    <label for="quarterly"
           class="o-forms-input__label ncf__payment-term__label"
    >
      <span class="ncf__payment-term__title">
        £20.00 - Digital FT + The Washington Post
      </span>
      <div class="ncf__b2c-partnership-payment-term__description">
        <p>
          Includes:
          <br>
          3 month Digital subscription to the Financial Times
          <br>
          90-day All-Access Digital subscription to The Washington Post
        </p>
      </div>
    </label>
  </div>
  <div class="ncf__payment-term__legal">
    <p>
      We will automatically renew your subscription using the payment method provided unless you cancel before your renewal date.
    </p>
    <p>
      We will notify you at least 14 days in advance of any changes to the price in your subscription that would apply upon next renewal. Find out more about our cancellation policy in our
      <a class="ncf__link--external"
         href="https://help.ft.com/help/legal-privacy/terms-conditions/"
         title="FT Legal Terms and Conditions help page"
         target="_blank"
         rel="noopener noreferrer"
      >
        Terms &amp; Conditions
      </a>
      .
    </p>
  </div>
</div>
`;
